macro-template/tests/ui/err/splice_without_repetition.rs
use macrotable::splice;

fn main() {
    splice!(#T in [u8] {
        let _ = 0;
    });
}
